--- a/components/HomeSplash/HomeSplash.module.css
+++ b/components/HomeSplash/HomeSplash.module.css
@@ -11,46 +11,9 @@
   margin-bottom: 10em;
   font-family: var(--my-header-font);
   color: var(--my-yellow);
-  --fade-in-full: fade-in 0.9s both 2.5s;
-
-  /* These need to be defined here so the cover bar can use them */
-  --names-left: 0vh;
-  --names-top-start: 16vh;
-  --names-top-step: 20vh;
-  --names-left-start: 18vh;
-  --names-left-step: 18vh;
-
-  --contrast-bar-transform: skew(48deg) scaleX(1.4);
+  --contrast-bar-transform: skew(60deg) scaleX(1.8);
 }
 
-.name {
-  font-family: var(--my-header-font);
-  color: var(--my-yellow);
-  font-size: 6rem;
-  line-height: 1.5em;
-
-  animation: var(--fade-in-full);
-  z-index: 10;
-  --skew: 3em;
-}
-
-@media only screen and (min-aspect-ratio: 7/5) {
-  .name {
-    --skew: 5em;
-  }
-  .HomeSplash {
-    --contrast-bar-transform: skew(55deg) scaleX(1.5) translateX(-1em);
-  }
-}
-
-.connor {
-  margin-left: calc(-1 * var(--skew));
-}
-.james {
-}
-.allen {
-  margin-left: var(--skew);
-}
 
 .HomeSplash .welcome {
   font-size: 2rem;
@@ -62,20 +25,12 @@
   line-height: 2em;
   padding: 0 0.8em;
   background-color: var(--my-dark-blue);
-  animation: var(--fade-in-full);
   text-align: center;
 }
 
 .HomeSplash .welcome a {
   color: inherit;
   text-decoration: underline;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
 }
 
 .center-box {
@@ -96,130 +51,34 @@
   width: 24em;
   height: 800vh;
   transform: var(--contrast-bar-transform);
-
+  
   --border: 1em solid
-    hsl(var(--green-hue), var(--green-sat), calc(var(--green-lit) - 10%));
+  hsl(var(--green-hue), var(--green-sat), calc(var(--green-lit) - 10%));
   border-left: var(--border);
   border-right: var(--border);
 }
 
-.middle-marker {
-  height: 1em;
-  width: 1em;
-  border-radius: 1em;
-  background-color: red;
-}
 
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
+@media only screen and (max-aspect-ratio: 7/5) {
+  .HomeSplash {
+     --contrast-bar-transform: skew(42deg) scaleX(1.4)
   }
 }
 
-/* Paisley Positioning */
-
-.left-paisley,
-.right-paisley {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  height: 100vh;
-  width: 50vw;
-  overflow: visible;
-  /* border: 1px solid red; */
-  box-sizing: border-box;
-}
-
-/* 
-  This: [class*="PaisleySwirl_base-el"]
-  is a kinda hacky way to select the base element in the PaisleySwirl css.
-  The "PaisleySwirl_" (and some abritrary suffix) is attached by the css module system to isolate styles
-  I want the home splash to style the paisley swril element for transforming and positioning
-
-  In the future I might just wrap the children I want to style with a div that I can access, but I wrote this css in a react project where everything was global
-  so this is the right way to translate it.
-*/
-
-.HomeSplash [class*="PaisleySwirl_base-el"],
-.HomeSplash [class*="PaisleySwirl_base-el"] * {
-  overflow: visible;
-}
-
-.HomeSplash [class*="PaisleySwirl_base-el"] {
-  min-height: 100vh;
-  min-width: 50vw;
-  position: absolute;
-  z-index: -1;
-}
-
-.left-paisley {
-  right: 50vw;
-  /* transform: translateX(-25vw); */
-}
-.right-paisley {
-  left: 50vw;
-  /* transform: translateX(25vw); */
-}
-
-.left-paisley [class*="PaisleySwirl_base-el"],
-.left-paisley [class*="PaisleySwirl_base-el"] svg {
-  right: 0;
-}
-.right-paisley [class*="PaisleySwirl_base-el"],
-.right-paisley [class*="PaisleySwirl_base-el"] svg {
-  left: 0;
-}
-/* *************************************************************** */
-
-.left-paisley [class*="PaisleySwirl_base-el"],
-.left-paisley [class*="PaisleySwirl_base-el"] svg {
-  right: 0;
-}
-
-.right-paisley [class*="PaisleySwirl_base-el"],
-.right-paisley [class*="PaisleySwirl_base-el"] svg {
-  left: 0;
-}
-
-.left-paisley [class*="PaisleySwirl_base-el"] svg {
-  transform: rotate(-90deg);
-}
-.right-paisley [class*="PaisleySwirl_base-el"] svg {
-  transform: rotate(90deg);
-}
-
-.HomeSplash [class*="PaisleySwirl_base-el"] svg {
-  height: 50vw;
-  min-height: 100%;
-  max-height: 50vw;
-
-  min-width: 100%;
-  width: 100vh;
-  max-width: 100vh;
-
-  position: absolute;
-}
-
-@media only screen and (max-width: 800px) {
+/* On tall Screens turn the contrast bar into a 40% bg-color wash
+and shift the paisleys around to fit the screen a little better */
+@media only screen and (max-aspect-ratio: 5/7) {
   .HomeSplash {
     --contrast-bar-transform: none;
   }
+  
   .contrast-cover-bar {
     height: 100vh;
     width: 100vw;
     background-color: hsl(var(--bg-hue), var(--bg-sat), var(--bg-light), 0.4);
     border: none;
   }
-  .HomeSplash .name {
-    font-size: 4.5rem;
-    line-height: 2em;
-    --skew: 0;
-  }
+  
   .HomeSplash .welcome {
     font-size: 1.5rem;
   }
