--- a/components/StaffingSample/RecruitsHead/RecruitsHead.module.css
+++ b/components/StaffingSample/RecruitsHead/RecruitsHead.module.css
@@ -11,6 +11,8 @@
   height: var(--header-height);
   font-weight: bolder;
   z-index: 100;
+  /* For dropdown */
+  overflow: visible;
 }
 
 .RecruitsHead[class*="explain-recruits"] {
@@ -49,6 +51,12 @@
   border: none;
 }
 
+.RecruitsHead .group button:active .button-body {
+  background-color: var(--bg-brighter-4);
+}
+
+
+
 .RecruitsHead .group.explain-recruits-groups .button-body {
   border: 2px solid var(--my-yellow);
 }
@@ -69,37 +77,28 @@
 
 .RecruitsHead .sort {
   height: 100%;
-  background-color: var(--transparent);
+  background-color: inherit;
   display: flex;
   align-items: center;
   font-size: 1.1em;
+  width: 10.5em;
 }
 
 .RecruitsHead .sort label {
   flex: 1;
-  margin: 0 0.5em;
+  margin: 0em;
   white-space: nowrap;
+  margin-right: 0.5em;
 }
-.RecruitsHead .sort select {
-  all: unset;
-  cursor: pointer;
-  text-align: center;
-  flex: 1;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 0.9em;
-  font-family: inherit;
-}
+
 /* I wanted to attach this to the select object, but it wasn't working... */
-.RecruitsHead .sort::before {
+.RecruitsHead .sort:focus-within::before {
   content: "";
   display: block;
   position: absolute;
   background-color: var(--default-text);
   height: 1px;
-  width: 3.1em;
+  width: 4.8em;
   top: 2em;
   right: 0.8em;
   z-index: 101;
@@ -114,6 +113,32 @@
   border: 2px solid var(--my-yellow);
   box-sizing: border-box;
 }
+
+.RecruitsHead [class*='dropdown'] {
+  width: 9em;  
+}
+
+.RecruitsHead [class*='dropdown'],
+.RecruitsHead [class*='dropdown'] * {
+  /* Have to do this to overwrite the semantic js styles */
+  background-color: inherit !important;
+  color: var(--default-text) !important;
+}
+
+.RecruitsHead [class*='dropdown']:focus {
+  border-color: var(--transparent) !important;
+}
+.RecruitsHead [class*='dropdown'][class*='active'],
+.RecruitsHead [class*='dropdown'][class*='active'] * {
+  border-color: var(--default-text) !important;
+}
+
+.RecruitsHead [class*='item']:hover,
+.RecruitsHead [class*='item']:active,
+.RecruitsHead [class*='item'][class*='active'] {
+  background-color: var(--bg-brighter-2) !important
+}
+
 
 @media only screen and (max-width: 800px) {
   .RecruitsHead {
